Migrated rotary_encoder_input to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "components/modules/drivers/mcp23017_io_expander"]
 	path = components/modules/drivers/mcp23017_io_expander
 	url = git@github.com:magradze/mcp23017_io_expander.git
+[submodule "components/modules/drivers/rotary_encoder_input"]
+	path = components/modules/drivers/rotary_encoder_input
+	url = git@github.com:magradze/rotary_encoder_input.git
