Migrated spi_bus to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "components/modules/drivers/rotary_encoder_input"]
 	path = components/modules/drivers/rotary_encoder_input
 	url = git@github.com:magradze/rotary_encoder_input.git
+[submodule "components/modules/drivers/spi_bus"]
+	path = components/modules/drivers/spi_bus
+	url = git@github.com:magradze/spi_bus.git
