--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "components/modules/drivers/sn74hc595n_writer"]
 	path = components/modules/drivers/sn74hc595n_writer
 	url = git@github.com:magradze/sn74hc595n_writer.git
+[submodule "components/modules/system/connectivity_watchdog"]
+	path = components/modules/system/connectivity_watchdog
+	url = git@github.com:magradze/connectivity_watchdog.git
