Migrated alarms_manager to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "components/modules/system/connectivity_watchdog"]
 	path = components/modules/system/connectivity_watchdog
 	url = git@github.com:magradze/connectivity_watchdog.git
+[submodule "components/modules/system/alarms_manager"]
+	path = components/modules/system/alarms_manager
+	url = git@github.com:magradze/alarms_manager.git
