Migrated health_monitor to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "components/modules/system/alarms_manager"]
 	path = components/modules/system/alarms_manager
 	url = git@github.com:magradze/alarms_manager.git
+[submodule "components/modules/system/health_monitor"]
+	path = components/modules/system/health_monitor
+	url = git@github.com:magradze/health_monitor.git
