Migrated time_sync to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "components/modules/system/ota_update_manager"]
 	path = components/modules/system/ota_update_manager
 	url = git@github.com:magradze/ota_update_manager.git
+[submodule "components/modules/system/time_sync"]
+	path = components/modules/system/time_sync
+	url = git@github.com:magradze/time_sync.git
