Migrated logger_module to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "components/modules/security/security_status_reporter"]
 	path = components/modules/security/security_status_reporter
 	url = git@github.com:magradze/security_status_reporter.git
+[submodule "components/modules/utillities/logger_module"]
+	path = components/modules/utillities/logger_module
+	url = git@github.com:magradze/logger_module.git
