Migrated rgb_led_indicator to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "components/modules/utillities/logger_module"]
 	path = components/modules/utillities/logger_module
 	url = git@github.com:magradze/logger_module.git
+[submodule "components/modules/utillities/rgb_led_indicator"]
+	path = components/modules/utillities/rgb_led_indicator
+	url = git@github.com:magradze/rgb_led_indicator.git
