Migrated ui_manager to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "components/modules/utillities/rgb_led_indicator"]
 	path = components/modules/utillities/rgb_led_indicator
 	url = git@github.com:magradze/rgb_led_indicator.git
+[submodule "components/modules/utillities/ui_manager"]
+	path = components/modules/utillities/ui_manager
+	url = git@github.com:magradze/ui_manager.git
