--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "components/modules/utillities/ui_manager"]
 	path = components/modules/utillities/ui_manager
 	url = git@github.com:magradze/ui_manager.git
+[submodule "components/modules/utillities/command_router"]
+	path = components/modules/utillities/command_router
+	url = git@github.com:magradze/command_router.git
