Migrated system_timer to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "components/modules/utillities/command_router"]
 	path = components/modules/utillities/command_router
 	url = git@github.com:magradze/command_router.git
+[submodule "components/modules/utillities/system_timer"]
+	path = components/modules/utillities/system_timer
+	url = git@github.com:magradze/system_timer.git
