Migrated self_test_manager to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "components/modules/utillities/system_timer"]
 	path = components/modules/utillities/system_timer
 	url = git@github.com:magradze/system_timer.git
+[submodule "components/modules/diagnostics/self_test_manager"]
+	path = components/modules/diagnostics/self_test_manager
+	url = git@github.com:magradze/self_test_manager.git
