Migrated wifi_manager to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "components/modules/communications/mqtt_manager"]
 	path = components/modules/communications/mqtt_manager
 	url = git@github.com:magradze/mqtt_manager.git
+[submodule "components/modules/communications/wifi_manager"]
+	path = components/modules/communications/wifi_manager
+	url = git@github.com:magradze/wifi_manager.git
