Migrated sensor_aggregator to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "components/modules/sensors/time_of_flight_sensor"]
 	path = components/modules/sensors/time_of_flight_sensor
 	url = git@github.com:magradze/time_of_flight_sensor.git
+[submodule "components/modules/sensors/sensor_aggregator"]
+	path = components/modules/sensors/sensor_aggregator
+	url = git@github.com:magradze/sensor_aggregator.git
