--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "components/modules/sensors/sensor_aggregator"]
 	path = components/modules/sensors/sensor_aggregator
 	url = git@github.com:magradze/sensor_aggregator.git
+[submodule "components/modules/storage/storage_manager"]
+	path = components/modules/storage/storage_manager
+	url = git@github.com:magradze/storage_manager.git
