Migrated ssd1306_driver to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "components/modules/storage/storage_manager"]
 	path = components/modules/storage/storage_manager
 	url = git@github.com:magradze/storage_manager.git
+[submodule "components/modules/displays/ssd1306_driver"]
+	path = components/modules/displays/ssd1306_driver
+	url = git@github.com:magradze/ssd1306_driver.git
