Migrated timer_test_module to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "components/modules/testing/sensor_simulator"]
 	path = components/modules/testing/sensor_simulator
 	url = git@github.com:magradze/sensor_simulator.git
+[submodule "components/modules/testing/timer_test_module"]
+	path = components/modules/testing/timer_test_module
+	url = git@github.com:magradze/timer_test_module.git
