feat(logger): Add centralized logging module for event monitoring and debugging
- Introduced logger module with runtime control and console output features.
- Implemented event handling and subscription to the Event Bus.
- Added Kconfig options for enabling/disabling the module and configuring instance names.
- Created comprehensive documentation for module usage and configuration.
- Updated sdkconfig to include logger module settings.
- Removed deprecated modules and cleaned up configuration.

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "components/modules/testing/timer_test_module"]
 	path = components/modules/testing/timer_test_module
 	url = git@github.com:magradze/timer_test_module.git
+[submodule "components/utilities/logger"]
+	path = components/utilities/logger
+	url = https://github.com/magradze/logger_module.git
