feat(logger): Integrate logger module as a submodule and update configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "components/utilities/logger"]
 	path = components/utilities/logger
 	url = https://github.com/magradze/logger_module.git
+[submodule "components/modules/utilities/logger_module"]
+	path = components/modules/utilities/logger_module
+	url = https://github.com/magradze/logger_module.git
